--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
 
       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder.
         env:
-          VITE_ALCHEMY_ARBITRUM_KEY: ${{ secrets.ALCHEMY_ARBITRUM_KEY }}
+          VITE_ALCHEMY_ETHEREUM_KEY: ${{ secrets.ALCHEMY_ETHEREUM_KEY }}
         run: |
           npm install
           npm run build
