--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder.
         env:
           VITE_ALCHEMY_ETHEREUM_KEY: ${{ secrets.ALCHEMY_ETHEREUM_KEY }}
+          VITE_INFURA_ETHEREUM_KEY: ${{ secrets.INFURA_ETHEREUM_KEY }}
         run: |
           npm install
           npm run build
